envoy-service-with-tls.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.cloud.tencent.com/specify-protocol: '{"80":{"protocol":["TCP_SSL"],"tls":"cert-secret"}}'
  name: envoy
  namespace: grpc
spec:
  type: LoadBalancer
  selector:
    app: front-envoy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
